--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
